fix top alignment error - weird

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,7 +15,12 @@ body {
   padding: 0;
   font-kerning: auto;
   overflow-x: hidden;
-  // overflow: hidden;
+
+  top:-260px;
+
+  @include mobile {
+    // top:1000px;
+  }
 
   transform: scale(.97);
 }
